remove old and update swagger
