# app/Http/Controllers/AuthController.php
@@ -20,19 +20,62 @@ class AuthController extends Controller
     ){}
 
     /**
+     *
+     * @OA\Info(
+     *      version="1.0.0",
+     *      title="Marco Api Document",
+     *      description="This is the API documentation for our project.",
+     *      @OA\Contact(
+     *          email="alibabaeian670@gmail.com"
+     *      )
+     * )
      * @OA\Post(
      *      path="/api/login",
-     *      @OA\Response(response="200", description="Post login data"),
+     *      summary="Login user",
+     *      description="Login user with phone number and code",
      *      @OA\Parameter(
      *          name="phone",
-     *          in="path",
+     *          in="query",
      *          description="Login with phone number",
      *          required=true,
+     *          @OA\Schema(
+     *              type="string"
+     *          )
      *      ),
-     *  )
-     * @return \Symfony\Component\HttpFoundation\JsonResponse
-     *
+     *      @OA\Parameter(
+     *          name="code",
+     *          in="query",
+     *          description="Verification code",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful login",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token", type="string"),
+     *             @OA\Property(property="client_id", type="integer"),
+     *             @OA\Property(property="client_secret", type="string")
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=203,
+     *          description="Verification code error",
+     *      )
+     * )
+     * @OA\SecurityScheme(
+     *     type="http",
+     *     description="Use Passport bearer token to access protected endpoints",
+     *     name="Authorization",
+     *     in="header",
+     *     scheme="bearer",
+     *     bearerFormat="JWT",
+     *     securityScheme="passport",
+     * )
      */
+
     public function store(StoreAuthRequest $request): JsonResponse
     {
         if ($request->code) {
@@ -75,10 +118,12 @@ class AuthController extends Controller
                 ], 203);
             }
         } else {
+            $send = $this->smsService->send($request->phone);
             return response()->json([
                 'data' => [
                     'phone' => "0{$request->phone}",
-                    'time' => $this->smsService->send($request->phone)['time'],
+                    'time' => $send['time'],
+                    'code' => env('APP_DEBUG') ? $send['code'] : null
                 ],
             ], 202);
         }
