# routes/api.php
@@ -5,22 +5,12 @@ use App\Http\Controllers\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| is assigned the "api" middleware group. Enjoy building your API!
-|
-*/
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::apiResource('login',AuthController::class);
+Route::middleware('throttle:10,1')->apiResource('login',AuthController::class);
 Route::middleware(['auth:api'])->group(function () {
     Route::prefix('admin')->group(function(){
         Route::apiResource('user',UserController::class);
